--- a/AppProdutos/AppProdutos/pom.xml
+++ b/AppProdutos/AppProdutos/pom.xml
@@ -26,18 +26,23 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
-		<!-- <dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		-->
 		
 		<dependency>
       		<groupId>org.postgresql</groupId>
       		<artifactId>postgresql</artifactId>
       		<scope>runtime</scope>
     	</dependency>
+    	
+    	<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
