--- a/AppContatos/src/main/resources/application.properties
+++ b/AppContatos/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 server.port=8080
 
 #H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#Postgres
+spring.datasource.url: jdbc:postgresql://localhost:5432/itau
+spring.datasource.username: admin
+spring.datasource.password: admin
+spring.datasource.driver-class-name: org.postgresql.Driver
+spring.jpa.database-platform: org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.shoq-sql=true
+#spring.jpa.hibernate.ddl-auto: drop-and-create
+spring.jpa.hibernate.ddl-auto: update
